# terratools

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  changelog.txt  mkdocs.yml  pyproject.toml  readthedocs.yaml  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: draft-pdf.yml  main.yml  publish.yml  zizmor.yml
contrib/utilities/: indent
docs/: SeismicLookupTable.md  about.md  copy_ref_examples.py  file_formats.md  gen_ref_pages.py  index.md  model.md  properties.md  reference_frames.md  references.bib  requirements.txt  zz_bibliography.md
docs/api/: terra_model.md
docs/api/properties/: attenuation.md  perplex.md  profiles.md  utilities.md
examples/: example_1D_profiles.py  example_add_adiabat.py  example_attenuation.py  example_convert.py  example_cross_section.py  example_evaluate_points.py  example_fit_Simon_Glatzel.py  example_healpy.py  example_lookup_tables.py  example_perplex.py  example_plot_flowfield.py  example_plot_map.py  example_plume_detect.py  example_radial_profiles.py  example_read_file.py  example_read_layer.py  example_spherical_harmonics.py  example_triangle_interpolation.py
examples/data/: example_mesh_points.txt
misc/ref/: example_1D_profiles.py.out  example_attenuation.py.out  example_convert.py.out  example_cross_section.py.out  example_fit_Simon_Glatzel.py.out  example_healpy.py.out  example_lookup_tables.py.out  example_plume_detect.py.out  example_radial_profiles.py.out  example_read_file.py.out  example_read_layer.py.out
paper/: paper.bib  paper.md
terra_tools/: __init__.py  terra_model.py
terratools/: __init__.py  alpha_data.py  convert_files.py  example_data.py  flow_conversion.py  geographic.py  lookup_tables.py  plot.py  plume_detection.py  terra_model.py  utils.py
terratools/data/: gmt_coastlines_A10000.txt
terratools/properties/: __init__.py  attenuation.py  perplex.py  profiles.py  utilities.py
terratools/properties/data/: perplex_build_template.txt
tests/: test_1d_profile.py  test_adiabat.py  test_attenuation.py  test_convert_files.py  test_flow_vector_conversion.py  test_geographic.py  test_lookup_table.py  test_plot.py  test_plume_detect.py  test_radial_profile.py  test_read_layer.py  test_terra_model.py  test_terra_model_lookup_tables.py  test_terra_model_read_netcdf.py  test_umm.py
tests/data/: TERRA_grid_lon-2_2_lat-2_2.txt  model_no_c_hist.comp  multi_table_test1.txt  multi_table_test2.txt  test_lookup_table.txt
