[tool.poetry]
name = "terratools"
version = "0.1.0"
description = "Tools to read, analyse and visualise models written by the TERRA mantle convection code."
authors = [
  "James Panton <pantonjc@cardiff.ac.uk>", 
  "Andy Nowacki <a.nowacki@leeds.ac.uk>",
  "Bob Myhill <bob.myhill@bristol.ac.uk>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mantle-convection-constrained/terratools"
repository = "https://github.com/mantle-convection-constrained/terratools"
documentation = "https://readthedocs.org/projects/terratools"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
scipy = "^1.6"
netcdf4 = "^1"
matplotlib = "^3.5"
scikit-learn = "^1.1.2"
Cartopy = "^0.21.0"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
