[tool.poetry]
name = "terratools"
version = "1.0.1"
description = "Tools to read, analyse and visualise models written by the TERRA mantle convection code."
authors = [
  "James Panton <pantonjc@cardiff.ac.uk>", 
  "Andy Nowacki <a.nowacki@leeds.ac.uk>",
  "Bob Myhill <bob.myhill@bristol.ac.uk>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mantle-convection-constrained/terratools"
repository = "https://github.com/mantle-convection-constrained/terratools"
documentation = "https://readthedocs.org/projects/terratools"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23"
scipy = "^1.6"
netcdf4 = "^1"
matplotlib = "^3.5"
scikit-learn = "^1.3.0"
healpy = "^1.16.2"
pooch = "^1.7"


[tool.poetry.dev-dependencies]
ipython = "^8.5.0"
black = "^23.9.1"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
cartopy = "^0.21.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
