[project]
name = "terratools"
version = "1.2.1"
description = "Tools to read, analyse and visualise models written by the TERRA mantle convection code."
authors = [
  {name = "Andy Nowacki", email = "a.nowacki@leeds.ac.uk"},
  {name = "James Panton", email = "jpanton@uni-koeln.de"},
  {name = "Jamie Ward"},
  {name = "Bob Myhill", email = "bob.myhill@bristol.ac.uk"},
  {name = "Andrew Walker", email = "andrew.walker@earth.ox.ac.uk"},
  {name = "James Wookey", email = "j.wookey@bristol.ac.uk"},
  {name = "J Huw Davies", email = "daviesjh2@cardiff.ac.uk"},
]
maintainers = [
  {name = "Andy Nowacki", email = "a.nowacki@leeds.ac.uk"},
  {name = "Andrew Walker", email = "andrew.walker@earth.ox.ac.uk"},
  {name = "Bob Myhill", email = "bob.myhill@bristol.ac.uk"},
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
  "healpy (>=1.16.2,<2)",
  "matplotlib (>=3.5,<4)",
  "netcdf4 (>=1,<2)",
  "numpy (>=1.23,<2)",
  "pooch (>=1.7,<2)",
  "scikit-learn (>=1.3.0,<2)",
  "scipy  (>=1.6,<2)",
]

[dependency-groups]
dev = [
  "black (>=23.9.1,<24)",
  "cartopy (>=0.21.1,<0.26)",
  "ipython (>=8.5.0,<9)",
]

[project.urls]
Homepage = "https://github.com/mantle-convection-constrained/terratools"
Repository = "https://github.com/mantle-convection-constrained/terratools"
Documentation = "https://readthedocs.org/projects/terratools"
"JOSS paper" = "https://doi.org/10.21105/joss.07539"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
